# MetalBench

./: .gitignore  CMakeLists.txt  CompareGraphs.py  LONG_DESCRIPTION_PROMPT.txt  README.md  commands_to_run.txt  onnxruntime_profile.json_2025-11-12_20-47-55.json  onnxruntime_profile.json_2025-11-12_20-49-39.json  onnxruntime_profile.json_2025-11-12_20-51-10.json  onnxruntime_profile.json_2025-11-12_20-52-06.json  onnxruntime_profile.json_2025-11-12_20-57-51.json  onnxruntime_profile.json_2025-11-12_20-58-48.json  onnxruntime_profile.json_2025-11-12_21-00-03.json  onnxruntime_profile.json_2025-11-12_21-00-37.json  onnxruntime_profile.json_2025-11-12_21-01-06.json  onnxruntime_profile.json_2025-11-12_21-01-15.json  onnxruntime_profile.json_2025-11-12_21-01-56.json  onnxruntime_profile.json_2025-11-12_21-02-12.json  onnxruntime_profile.json_2025-11-12_21-02-29.json  onnxruntime_profile.json_2025-11-12_21-04-34.json  onnxruntime_profile.json_2025-11-12_21-05-14.json  onnxruntime_profile.json_2025-11-12_21-07-32.json  onnxruntime_profile.json_2025-11-12_21-07-34.json  onnxruntime_profile.json_2025-11-12_21-15-32.json  onnxruntime_profile.json_2025-11-12_21-15-52.json  onnxruntime_profile.json_2025-11-12_21-16-44.json  onnxruntime_profile.json_2025-11-12_21-16-56.json  onnxruntime_profile.json_2025-11-12_21-17-04.json  onnxruntime_profile.json_2025-11-12_21-18-01.json  onnxruntime_profile.json_2025-11-12_21-18-25.json  onnxruntime_profile.json_2025-11-12_21-19-23.json  onnxruntime_profile.json_2025-11-12_21-19-29.json  onnxruntime_profile.json_2025-11-12_21-19-31.json  (+15 more)
(+37 files in other folders)
